@@ -7,29 +7,30 @@ import com.binar.byteacademy.common.util.SlugUtil;
 import com.binar.byteacademy.dto.request.CreateCourseRequest;
 import com.binar.byteacademy.dto.request.UpdateCourseRequest;
 import com.binar.byteacademy.dto.response.*;
-import com.binar.byteacademy.entity.Category;
-import com.binar.byteacademy.entity.Course;
-import com.binar.byteacademy.entity.User;
-import com.binar.byteacademy.enumeration.EnumCourseLevel;
-import com.binar.byteacademy.enumeration.EnumCourseType;
-import com.binar.byteacademy.enumeration.EnumFilterCoursesBy;
-import com.binar.byteacademy.enumeration.EnumStatus;
+import com.binar.byteacademy.entity.*;
+import com.binar.byteacademy.enumeration.*;
+import com.binar.byteacademy.exception.DataConflictException;
 import com.binar.byteacademy.exception.DataNotFoundException;
 import com.binar.byteacademy.exception.ServiceBusinessException;
 import com.binar.byteacademy.repository.CategoryRepository;
 import com.binar.byteacademy.repository.CourseRepository;
+import com.binar.byteacademy.repository.PurchaseRepository;
 import com.binar.byteacademy.repository.specification.CourseFilterSpecification;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.cache.annotation.*;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 import static com.binar.byteacademy.common.util.Constants.ControllerMessage.CATEGORY_NOT_FOUND;
 import static com.binar.byteacademy.common.util.Constants.ControllerMessage.COURSE_NOT_FOUND;
@@ -37,22 +38,26 @@ import static com.binar.byteacademy.common.util.Constants.TableName.COURSE_TABLE
 
 @Service
 @RequiredArgsConstructor
+@CacheConfig(cacheNames = "courses")
+@Slf4j
 public class CourseServiceImpl implements CourseService {
     private final CourseRepository courseRepository;
     private final CategoryRepository categoryRepository;
+    private final PurchaseRepository purchaseRepository;
     private final JwtUtil jwtUtil;
     private final ImageUtil imageUtil;
     private final CheckDataUtil checkDataUtil;
     private final SlugUtil slugUtil;
 
     @Override
+    @Async("asyncExecutor")
+    @CacheEvict(value = "allCourses", allEntries = true, condition = "#result != null")
     public CompletableFuture<CourseResponse> addCourse(CreateCourseRequest request) {
         return CompletableFuture.supplyAsync(() -> {
             try {
-                String pathCourseImage = imageUtil.base64UploadImage(request.getPathCourseImage()).join();
                 String slug = Optional.ofNullable(request.getSlugCourse()).orElseGet(() -> slugUtil.toSlug(COURSE_TABLE, "slug_course", request.getCourseName()));
-
                 return categoryRepository.findBySlugCategory(request.getSlugCategory()).map(category -> {
+                    String pathCourseImage = imageUtil.base64UploadImage(request.getPathCourseImage()).join();
                     Course course = Course.builder()
                             .courseName(request.getCourseName()).
                             instructorName(request.getInstructorName())
@@ -60,14 +65,14 @@ public class CourseServiceImpl implements CourseService {
                             .courseType(request.getCourseType())
                             .courseStatus(request.getCourseStatus())
                             .totalCourseRate(0.0)
-                            .price(request.getPrice())
+                            .price(request.getCourseType() == EnumCourseType.FREE ? 0 : request.getPrice())
                             .courseDuration(request.getCourseDuration())
                             .slugCourse(slug)
                             .pathCourseImage(pathCourseImage)
                             .category(category)
                             .groupLink(request.getGroupLink())
                             .targetMarket(request.getTargetMarket())
-                            .totalModules(0)
+                            .totalChapter(0)
                             .courseDescription(request.getCourseDescription())
                             .build();
 
@@ -81,7 +86,7 @@ public class CourseServiceImpl implements CourseService {
                             .price(course.getPrice())
                             .totalCourseRate(course.getTotalCourseRate())
                             .courseDuration(course.getCourseDuration())
-                            .totalModules(course.getTotalModules())
+                            .totalChapters(course.getTotalChapter())
                             .slugCourse(course.getSlugCourse())
                             .pathCourseImage(course.getPathCourseImage())
                             .targetMarket(course.getTargetMarket())
@@ -92,51 +97,79 @@ public class CourseServiceImpl implements CourseService {
                                             .pathCategoryImage(category.getPathCategoryImage())
                                             .build())
                             .build();
-                }).orElseThrow(() -> new DataNotFoundException("Category not found"));
+                }).orElseThrow(() -> new DataNotFoundException(CATEGORY_NOT_FOUND));
+            } catch (DataNotFoundException | DataConflictException e) {
+                throw e;
             } catch (Exception e) {
-                throw new ServiceBusinessException(e.getMessage());
+                throw new ServiceBusinessException("Failed to create course");
             }
         });
     }
 
 
     @Override
-    public CompletableFuture<Void> updateCourse(String slugCourse, UpdateCourseRequest request) {
-        return CompletableFuture.runAsync(() -> {
+    @Caching(evict = {
+            @CacheEvict(key = "'getCustomerCourseDetail-' + #slugCourse"),
+            @CacheEvict(key = "'getAdminCourseDetail-' + #slugCourse"),
+            @CacheEvict(value = {
+                    "allCourses", "chapters", "allChapters", "materials", "allMaterials",
+                    "allPurchases", "discussions", "allDiscussion",
+                    "allCoursePromos", "coursePromos",
+                    "allPromos", "promos", "allComments", "comments",
+                    "replies", "allReplies", "dashboard"
+            }, allEntries = true, condition = "#result != null")
+    })
+    public CompletableFuture<CourseResponse> updateCourse(String slugCourse, UpdateCourseRequest request) {
+        return CompletableFuture.supplyAsync(() -> {
             try {
-                courseRepository.findFirstBySlugCourse(slugCourse).map(course -> {
-                    checkDataUtil.checkDataField(COURSE_TABLE, "course_name", request.getCourseName(), "course_id", course.getId());
-                    course.setCourseName(request.getCourseName());
-                    course.setInstructorName(request.getInstructorName());
-                    course.setCourseLevel(request.getCourseLevel());
-                    course.setCourseType(request.getCourseType());
-                    course.setPrice(request.getPrice());
-                    course.setCourseDuration(request.getCourseDuration());
-                    course.setTargetMarket(request.getTargetMarket());
-                    course.setGroupLink(request.getGroupLink());
-                    course.setCourseStatus(request.getCourseStatus());
-                    course.setCourseDescription(request.getCourseDescription());
-
-                    Optional.ofNullable(request.getSlugCourse()).ifPresent(slug -> {
-                        checkDataUtil.checkDataField(COURSE_TABLE, "slug_course", slug, "course_id", course.getId());
-                        course.setSlugCourse(slug);
-                    });
-
-                    Optional.ofNullable(request.getPathCourseImage()).ifPresent(image -> {
-                        imageUtil.deleteImage(course.getPathCourseImage());
-                        String pathCourseImage = imageUtil.base64UploadImage(image).join();
-                        course.setPathCourseImage(pathCourseImage);
-                    });
-
-                    Optional.ofNullable(request.getSlugCategory()).ifPresent(slugCategory -> {
-                        Category category = categoryRepository.findBySlugCategory(slugCategory).orElseThrow(() -> new DataNotFoundException(CATEGORY_NOT_FOUND));
-                        course.setCategory(category);
-                    });
-
-                    return course;
-                }).ifPresentOrElse(courseRepository::save, () -> {
-                    throw new DataNotFoundException(COURSE_NOT_FOUND);
-                });
+                return categoryRepository.findBySlugCategory(request.getSlugCategory())
+                        .map(category -> courseRepository.findFirstBySlugCourse(slugCourse)
+                                .map(course -> {
+                                    checkDataUtil.checkDataField(COURSE_TABLE, "course_name", request.getCourseName(), "course_id", course.getId());
+                                    checkDataUtil.checkDataField(COURSE_TABLE, "slug_course", request.getSlugCourse(), "course_id", course.getId());
+                                    course.setCourseName(request.getCourseName());
+                                    course.setInstructorName(request.getInstructorName());
+                                    course.setCourseLevel(request.getCourseLevel());
+                                    course.setCourseType(request.getCourseType());
+                                    course.setCourseStatus(request.getCourseStatus());
+                                    course.setPrice(request.getCourseType() == EnumCourseType.FREE ? 0 : request.getPrice());
+                                    course.setCourseDuration(request.getCourseDuration());
+                                    course.setSlugCourse(request.getSlugCourse());
+                                    course.setGroupLink(request.getGroupLink());
+                                    course.setTargetMarket(request.getTargetMarket());
+                                    course.setCourseDescription(request.getCourseDescription());
+                                    Optional.ofNullable(request.getPathCourseImage())
+                                            .ifPresent(image -> {
+                                                imageUtil.deleteImage(course.getPathCourseImage());
+                                                String pathCourseImage = imageUtil.base64UploadImage(request.getPathCourseImage()).join();
+                                                course.setPathCourseImage(pathCourseImage);
+                                            });
+                                    course.setCategory(category);
+                                    courseRepository.save(course);
+                                    return CourseResponse.builder()
+                                            .courseName(course.getCourseName())
+                                            .instructorName(course.getInstructorName())
+                                            .courseLevel(course.getCourseLevel())
+                                            .courseType(course.getCourseType())
+                                            .price(course.getPrice())
+                                            .totalCourseRate(course.getTotalCourseRate())
+                                            .courseDuration(course.getCourseDuration())
+                                            .totalChapters(course.getTotalChapter())
+                                            .slugCourse(course.getSlugCourse())
+                                            .pathCourseImage(course.getPathCourseImage())
+                                            .targetMarket(course.getTargetMarket())
+                                            .category(
+                                                    CategoryResponse.builder().
+                                                            categoryName(category.getCategoryName())
+                                                            .slugCategory(category.getSlugCategory())
+                                                            .pathCategoryImage(category.getPathCategoryImage())
+                                                            .build())
+                                            .build();
+                                })
+                                .orElseThrow(() -> new DataNotFoundException(COURSE_NOT_FOUND)))
+                        .orElseThrow(() -> new DataNotFoundException(CATEGORY_NOT_FOUND));
+            } catch (DataNotFoundException | DataConflictException e) {
+                throw e;
             } catch (Exception e) {
                 throw new ServiceBusinessException("Failed to update course");
             }
@@ -144,9 +177,29 @@ public class CourseServiceImpl implements CourseService {
     }
 
     @Override
-    public Page<CourseResponse> getAllCourse(Pageable pageable) {
+    @Cacheable(value = "allCourses", key = "'getListCourse'", unless = "#result == null")
+    public List<CourseResponse> getListCourse() {
         try {
-            return Optional.of(courseRepository.findAll(pageable)).filter(Page::hasContent).map(coursePage -> coursePage.map(course -> CourseResponse.builder().courseName(course.getCourseName()).instructorName(course.getInstructorName()).courseLevel(course.getCourseLevel()).courseType(course.getCourseType()).price(course.getPrice()).totalCourseRate(course.getTotalCourseRate()).courseDuration(course.getCourseDuration()).totalModules(course.getTotalModules()).slugCourse(course.getSlugCourse()).pathCourseImage(course.getPathCourseImage()).category(CategoryResponse.builder().categoryName(course.getCategory().getCategoryName()).slugCategory(course.getCategory().getSlugCategory()).pathCategoryImage(course.getCategory().getPathCategoryImage()).build()).build())).orElseThrow(() -> new DataNotFoundException(COURSE_NOT_FOUND));
+            List<Course> courseList = courseRepository.findAll();
+            return courseList.stream().map(course ->
+                            CourseResponse.builder()
+                            .courseName(course.getCourseName())
+                            .instructorName(course.getInstructorName())
+                            .courseLevel(course.getCourseLevel())
+                            .courseType(course.getCourseType())
+                            .price(course.getPrice())
+                            .totalCourseRate(course.getTotalCourseRate())
+                            .courseDuration(course.getCourseDuration())
+                            .totalChapters(course.getTotalChapter())
+                            .slugCourse(course.getSlugCourse())
+                            .pathCourseImage(course.getPathCourseImage())
+                            .category(CategoryResponse.builder()
+                                    .categoryName(course.getCategory().getCategoryName())
+                                    .slugCategory(course.getCategory().getSlugCategory())
+                                    .pathCategoryImage(course.getCategory().getPathCategoryImage())
+                                    .build())
+                            .build()
+            ).toList();
         } catch (DataNotFoundException e) {
             throw e;
         } catch (Exception e) {
@@ -154,12 +207,21 @@ public class CourseServiceImpl implements CourseService {
         }
     }
 
-    @Transactional
     @Override
+    @Caching(evict = {
+            @CacheEvict(key = "'getAdminCourseDetail-' + #slugCourse"),
+            @CacheEvict(value = {
+                    "allCourses", "chapters", "allChapters", "materials", "allMaterials",
+                    "allPurchases", "discussions", "allDiscussion",
+                    "allCoursePromos", "coursePromos",
+                    "allPromos", "promos", "allComments", "comments",
+                    "replies", "allReplies", "dashboard"
+            }, allEntries = true)
+    })
     public void deleteCourse(String slugCourse) {
         try {
             courseRepository.findFirstBySlugCourse(slugCourse).ifPresentOrElse(courseRepository::delete, () -> {
-                throw new DataNotFoundException(COURSE_NOT_FOUND);
+                throw new DataNotFoundException("Course not found for slug " + slugCourse);
             });
         } catch (DataNotFoundException e) {
             throw e;
@@ -168,22 +230,23 @@ public class CourseServiceImpl implements CourseService {
         }
     }
 
-    @Transactional(readOnly = true)
     @Override
     public Page<Course> getAllCourseByCriteria(List<String> categoryNames, List<EnumCourseLevel> courseLevels, List<EnumCourseType> courseTypes, List<EnumStatus> courseStatuses, List<EnumFilterCoursesBy> filterCoursesBy, String keyword, String username, Pageable pageable) throws DataNotFoundException {
-        categoryNames = Optional.ofNullable(categoryNames).map(val -> val.stream().map(String::toLowerCase).collect(Collectors.toList())).orElse(Collections.emptyList());
+        categoryNames = Optional.ofNullable(categoryNames).map(val -> val.stream().map(String::toLowerCase).toList()).orElse(Collections.emptyList());
         courseLevels = Optional.ofNullable(courseLevels).orElse(Collections.emptyList());
         courseTypes = Optional.ofNullable(courseTypes).orElse(Collections.emptyList());
         courseStatuses = Optional.ofNullable(courseStatuses).orElse(Collections.emptyList());
         filterCoursesBy = Optional.ofNullable(filterCoursesBy).orElse(Collections.emptyList());
+        keyword = Optional.ofNullable(keyword).map(String::toLowerCase).orElse(null);
         return Optional.of(courseRepository.findAll(CourseFilterSpecification.filterCourses(categoryNames, courseLevels, courseTypes, courseStatuses, filterCoursesBy, keyword, username), pageable)).filter(Page::hasContent).orElseThrow(() -> new DataNotFoundException("Course Not  Found"));
     }
 
     @Override
-    public Page<SearchCourseResponse> getCourseListForWeb(List<String> categoryNames, List<EnumCourseLevel> courseLevels, List<EnumCourseType> courseTypes, List<EnumStatus> courseStatuses, List<EnumFilterCoursesBy> filterCoursesBy, String keyword, Pageable pageable) {
+    @Cacheable(value = "allCourses", key = "'getCourseListForWeb-' + #pageable.pageNumber + '-' + #pageable.pageSize", unless = "#result == null")
+    public Page<CourseResponse> getCourseListForWeb(List<String> categoryNames, List<EnumCourseLevel> courseLevels, List<EnumCourseType> courseTypes, List<EnumStatus> courseStatuses, List<EnumFilterCoursesBy> filterCoursesBy, String keyword, Pageable pageable) {
         try {
             Page<Course> coursePage = getAllCourseByCriteria(categoryNames, courseLevels, courseTypes, courseStatuses, filterCoursesBy, keyword, null, pageable);
-            return coursePage.map(course -> SearchCourseResponse.builder().courseName(course.getCourseName()).categoryName(course.getCategory().getCategoryName()).instructorName(course.getInstructorName()).pathImage(course.getPathCourseImage()).price(course.getPrice()).courseType(course.getCourseType()).courseLevel(course.getCourseLevel()).totalCourseRate(course.getTotalCourseRate()).totalModules(course.getTotalModules()).courseDuration(course.getCourseDuration()).build());
+            return coursePage.map(course -> CourseResponse.builder().courseName(course.getCourseName()).instructorName(course.getInstructorName()).price(course.getPrice()).totalCourseRate(course.getTotalCourseRate()).totalChapters(course.getTotalChapter()).courseDuration(course.getCourseDuration()).slugCourse(course.getSlugCourse()).pathCourseImage(course.getPathCourseImage()).courseType(course.getCourseType()).courseLevel(course.getCourseLevel()).category(CategoryResponse.builder().categoryName(course.getCategory().getCategoryName()).pathCategoryImage(course.getCategory().getPathCategoryImage()).build()).build());
         } catch (DataNotFoundException e) {
             throw e;
         } catch (Exception e) {
@@ -192,10 +255,11 @@ public class CourseServiceImpl implements CourseService {
     }
 
     @Override
+    @Cacheable(value = "allCourses", key = "'getCourseListForAdmin-' + #pageable.pageNumber + '-' + #pageable.pageSize", unless = "#result == null")
     public Page<AdminCourseResponse> getCourseListForAdmin(List<String> categoryNames, List<EnumCourseLevel> courseLevels, List<EnumCourseType> courseTypes, List<EnumStatus> courseStatuses, List<EnumFilterCoursesBy> filterCoursesBy, String keyword, Pageable pageable) {
         try {
             Page<Course> coursePage = getAllCourseByCriteria(categoryNames, courseLevels, courseTypes, courseStatuses, filterCoursesBy, keyword, null, pageable);
-            return coursePage.map(course -> AdminCourseResponse.builder().slugCourse(course.getSlugCourse()).courseName(course.getCourseName()).categoryName(course.getCategory().getCategoryName()).price(course.getPrice()).courseType(course.getCourseType()).courseLevel(course.getCourseLevel()).courseStatus(course.getCourseStatus()).build());
+            return coursePage.map(course -> AdminCourseResponse.builder().slugCourse(course.getSlugCourse()).courseName(course.getCourseName()).price(course.getPrice()).courseType(course.getCourseType()).courseLevel(course.getCourseLevel()).courseStatus(course.getCourseStatus()).category(CategoryResponse.builder().categoryName(course.getCategory().getCategoryName()).pathCategoryImage(course.getCategory().getPathCategoryImage()).build()).build());
         } catch (DataNotFoundException e) {
             throw e;
         } catch (Exception e) {
@@ -204,27 +268,137 @@ public class CourseServiceImpl implements CourseService {
     }
 
     @Override
+    @Transactional
+    @Cacheable(value = "allCourses", key = "'getMyCourseList-' + #pageable.pageNumber + '-' + #pageable.pageSize", unless = "#result == null")
     public Page<MyCourseResponse> getMyCourseList(List<String> categoryNames, List<EnumCourseLevel> courseLevels, List<EnumCourseType> courseTypes, List<EnumStatus> courseStatuses, List<EnumFilterCoursesBy> filterCoursesBy, String keyword, Pageable pageable) {
         try {
             User user = jwtUtil.getUser();
             Page<Course> coursePage = getAllCourseByCriteria(categoryNames, courseLevels, courseTypes, courseStatuses, filterCoursesBy, keyword, user.getUsername(), pageable);
-            return coursePage.map(course -> MyCourseResponse.builder().courseName(course.getCourseName()).categoryName(course.getCategory().getCategoryName()).courseLevel(course.getCourseLevel()).instructorName(course.getInstructorName()).pathImage(course.getPathCourseImage()).courseLevel(course.getCourseLevel()).totalCourseRate(course.getTotalCourseRate()).totalModules(course.getTotalModules()).courseDuration(course.getCourseDuration()).coursePercentage(course.getUserProgresses().get(0).getCoursePercentage()).build());
+            return coursePage.map(course -> MyCourseResponse.builder().courseName(course.getCourseName()).instructorName(course.getInstructorName()).totalCourseRate(course.getTotalCourseRate()).totalChapter(course.getTotalChapter()).courseDuration(course.getCourseDuration()).slugCourse(course.getSlugCourse()).courseLevel(course.getCourseLevel()).pathCourseImage(course.getPathCourseImage()).category(CategoryResponse.builder().categoryName(course.getCategory().getCategoryName()).pathCategoryImage(course.getCategory().getPathCategoryImage()).build()).userProgressResponse(UserProgressResponse.builder().completionDate(course.getUserProgresses().get(0).getCompletionDate()).coursePercentage(course.getUserProgresses().get(0).getCoursePercentage()).isCompleted(course.getUserProgresses().get(0).getIsCompleted()).build()).build());
         } catch (DataNotFoundException e) {
             throw e;
         } catch (Exception e) {
-            throw new ServiceBusinessException("Failed get my course with filter");
+            throw new ServiceBusinessException("Failed get course with filter");
+        }
+    }
+
+
+    @Override
+    @Cacheable(key = "'getAdminCourseDetail-' + #slugCourse", unless = "#result == null")
+    public AdminCourseDetailResponse getAdminCourseDetail(String slugCourse) {
+        try {
+            return courseRepository.findFirstBySlugCourse(slugCourse)
+                    .map(
+                            course -> AdminCourseDetailResponse.builder()
+                                    .courseName(course.getCourseName())
+                                    .instructorName(course.getInstructorName())
+                                    .totalCourseRate(course.getTotalCourseRate())
+                                    .totalChapter(course.getTotalChapter())
+                                    .courseDuration(course.getCourseDuration())
+                                    .slugCourse(course.getSlugCourse())
+                                    .courseType(course.getCourseType())
+                                    .pathCourseImage(course.getPathCourseImage())
+                                    .courseDescription(course.getCourseDescription())
+                                    .price(course.getPrice())
+                                    .targetMarket(course.getTargetMarket())
+                                    .courseLevel(course.getCourseLevel())
+                                    .groupLink(course.getGroupLink())
+                                    .slugCategory(course.getCategory().getSlugCategory())
+                                    .build()
+                    ).orElseThrow(() -> new DataNotFoundException(COURSE_NOT_FOUND));
+        } catch (DataNotFoundException e) {
+            throw e;
+        } catch (Exception e) {
+            throw new ServiceBusinessException(e.getMessage());
         }
     }
 
     @Override
-    public CourseDetailResponse getCourseDetail(String courseSlug) {
+    @Transactional
+    public CustomerCourseDetailResponse getCustomerCourseDetail(String slugCourse) {
         try {
-            Course course = courseRepository.findFirstBySlugCourse(courseSlug).orElseThrow(() -> new DataNotFoundException("Course not found"));
-            return CourseDetailResponse.builder().courseName(course.getCourseName()).instructorName(course.getInstructorName()).totalCourseRate(course.getTotalCourseRate()).totalModules(course.getTotalModules()).courseDuration(course.getCourseDuration()).groupLink(course.getGroupLink()).slugCourse(course.getSlugCourse()).courseType(course.getCourseType()).pathCourseImage(course.getPathCourseImage()).courseLevel(course.getCourseLevel()).category(CategoryResponse.builder().categoryName(course.getCategory().getCategoryName()).pathCategoryImage(course.getCategory().getPathCategoryImage()).build()).chapters(course.getChapters().stream().map(chapter -> ChapterCourseDetailResponse.builder().title(chapter.getTitle()).chapterDuration(chapter.getChapterDuration()).noChapter(chapter.getNoChapter()).materials(chapter.getMaterials().stream().map(material -> MaterialCourseDetailResponse.builder().materialType(material.getMaterialType()).materialDuration(material.getMaterialDuration()).slugMaterial(material.getSlugMaterial()).build()).collect(Collectors.toList())).build()).collect(Collectors.toList())).build();
+            Course course = courseRepository.findFirstBySlugCourse(slugCourse)
+                    .orElseThrow(() -> new DataNotFoundException(COURSE_NOT_FOUND));
+            User user;
+            AtomicBoolean isMaterialLocked = new AtomicBoolean(true);
+            AtomicBoolean isMaterialCompleted = new AtomicBoolean(false);
+
+            if (jwtUtil.getTokenFromRequest() != null) {
+                user = jwtUtil.getUser();
+                purchaseRepository.findByUserAndCourseAndPurchaseStatus(user, course, EnumPurchaseStatus.PAID)
+                        .ifPresent(purchase -> {
+                            isMaterialLocked.set(false);
+                            isMaterialCompleted.set(true);
+                        });
+            } else {
+                user = null;
+            }
+
+            List<ChapterCourseDetailResponse> sortedChapters = course.getChapters().stream()
+                    .sorted(Comparator.comparing(Chapter::getNoChapter))
+                    .map(chapter -> {
+                        List<MaterialCourseDetailResponse> sortedMaterials = chapter.getMaterials().stream()
+                                .sorted(Comparator.comparing(Material::getSerialNumber))
+                                .map(material -> {
+                                    if (isMaterialCompleted.get()) {
+                                        return MaterialCourseDetailResponse.builder()
+                                                .materialName(material.getMaterialName())
+                                                .materialType(material.getMaterialType())
+                                                .materialDuration(material.getMaterialDuration())
+                                                .slugMaterial(material.getSlugMaterial())
+                                                .isLocked(isMaterialLocked.get())
+                                                .isCompleted(
+                                                        material.getMaterialActivities().stream()
+                                                                .anyMatch(materialActivities -> materialActivities.getUser().equals(user))
+                                                )
+                                                .build();
+                                    } else {
+                                        return MaterialCourseDetailResponse.builder()
+                                                .materialName(material.getMaterialName())
+                                                .materialType(material.getMaterialType())
+                                                .materialDuration(material.getMaterialDuration())
+                                                .slugMaterial(EnumMaterialType.FREE.equals(material.getMaterialType()) ? material.getSlugMaterial() : null)
+                                                .isLocked(!EnumMaterialType.FREE.equals(material.getMaterialType()))
+                                                .isCompleted(isMaterialCompleted.get())
+                                                .build();
+                                    }
+                                })
+                                .toList();
+
+                        return ChapterCourseDetailResponse.builder()
+                                .title(chapter.getTitle())
+                                .chapterDuration(chapter.getChapterDuration())
+                                .noChapter(chapter.getNoChapter())
+                                .materials(sortedMaterials)
+                                .build();
+                    })
+                    .toList();
+
+            return CustomerCourseDetailResponse.builder()
+                    .courseName(course.getCourseName())
+                    .instructorName(course.getInstructorName())
+                    .totalCourseRate(course.getTotalCourseRate())
+                    .totalChapter(course.getTotalChapter())
+                    .courseDuration(course.getCourseDuration())
+                    .groupLink(course.getGroupLink())
+                    .slugCourse(course.getSlugCourse())
+                    .courseType(course.getCourseType())
+                    .courseDescription(course.getCourseDescription())
+                    .targetMarket(course.getTargetMarket())
+                    .pathCourseImage(course.getPathCourseImage())
+                    .price(course.getPrice())
+                    .courseLevel(course.getCourseLevel())
+                    .category(CategoryResponse.builder()
+                            .categoryName(course.getCategory().getCategoryName())
+                            .pathCategoryImage(course.getCategory().getPathCategoryImage())
+                            .build())
+                    .chapters(sortedChapters)
+                    .build();
+
         } catch (DataNotFoundException e) {
             throw e;
         } catch (Exception e) {
-            throw new ServiceBusinessException("Failed to get course detail");
+            throw new ServiceBusinessException(e.getMessage());
         }
     }
 }
